--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,10 @@
 @import "reset.css";
 @import "fonts.css";
 
-.wrapper {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    width: 1200px;
-}
+@import "header.css";
+@import "banner.css";
 
-.banner-bg {
-    position: relative;
-    display: flex;
-    background-image: url("../img/header-bg.jpg");
-    z-index: 1;
-    width: 100%;
-    height: 853px;
-}
 
-.header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 110px;
-    background: rgba(0, 0, 0, 0.25);
-    z-index: 30;
-}
 
-.header__wrapper {
-    display: flex;
-    justify-content: space-between;
-    width: 940px;
-    height: 100%;
-    z-index: 40;
-}
 
-.header__link-logo {
-    display: flex;
-    margin-top: 27px;
-    height: 40px;
-}
 
-.header__logo {
-    width: 147px;
-    height: 100%;
-}
-
-.header__nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 620px;
-    height: 100%;
-}
-
-.header__nav-link {
-    font-family: "OpenSans Regular", sans-serif;
-    font-size: 18px;
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.banner {
-    display: flex;
-    width: 940px;
-    margin: 0 auto;
-    padding-top: 215px;
-    z-index: 20;
-}
-
-.banner__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 300px;
-}
-
-.banner__title {
-    display: flex;
-    align-items: center;
-    width: 300px;
-    margin-bottom: 48px;
-    text-align: center;
-    font-family: "OpenSans Light", sans-serif;
-    font-size: 50px;
-    color: #ffffff;
-    line-height: 62px;
-}
-
-.banner__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 294px;
-    height: 49px;
-    margin-bottom: 71px;
-    border: 3px solid #ffffff;
-    border-radius: 30px;
-    outline: none;
-    font-family: "OpenSans Bold", sans-serif;
-    font-size: 21px;
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.banner__brands {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 205px;
-    margin-bottom: 52px;
-}
-
-.banner__brand-apple {
-    width: 47px;
-    height: 56px;
-}
-
-.banner__brand-android {
-    width: 43px;
-    height: 47px;
-}
-
-.banner__brand-microsoft {
-    width: 44px;
-    height: 41px;
-}
-
-.banner__descr {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    text-align: center;
-    font-family: "OpenSans Light", sans-serif;
-    font-size: 18px;
-    color: #ffffff;
-    line-height: 24px;
-}
-
-.hand {
-    position: absolute;
-    bottom: 0;
-    left: 150px;
-    z-index: 10;
-}
