--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
-@import "reset.css";
+@import "common/reset.css";
 @import "fonts.css";
 
-@import "header.css";
-@import "banner.css";
+@import "components/header.css";
+@import "components/navigation.css";
+@import "components/banner.css";
 
 
 
