--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 @import "components/header.css";
 @import "components/navigation.css";
 @import "components/banner.css";
-
+@import "components/offers.css";
 
 
 
