--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 @import "components/navigation.css";
 @import "components/banner.css";
 @import "components/offers.css";
+@import "components/testimonials.css";
+@import "components/tariffs.css";
 
 
 
