--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -33,7 +33,7 @@
     font-family: "OpenSans Light", sans-serif;
     font-size: 50px;
     color: #ffffff;
-    line-height: 62px;
+    line-height: 1.2;
 }
 
 .banner__link {
@@ -83,7 +83,7 @@
     font-family: "OpenSans Light", sans-serif;
     font-size: 18px;
     color: #ffffff;
-    line-height: 24px;
+    line-height: 1.3;
 }
 
 .banner__hand {
