--- a/css/components/testimonials.css
+++ b/css/components/testimonials.css
@@ -1,14 +1,4 @@
-.testimonials {
-    display: flex;
-    width: 100%;
-}
-
-.testimonials__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 73%;
-    margin: 0 auto;
+.testimonials .section__wrapper {
     padding: 72px 0 40px;
 }
 
@@ -18,60 +8,3 @@
     margin-bottom: 50px;
 }
 
-/*SLIDER*/
-
-.swiper-container {
-    width: 100%;
-    height: 100%;
-}
-.swiper-slide {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.arrow {
-    position: absolute;
-    top: 15%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 22px;
-    height: 41px;
-    z-index: 10;
-    cursor: pointer;
-}
-
-.arrow-next {
-    right: 10px;
-    left: auto;
-}
-
-.arrow-prev {
-    right: auto;
-    left: 10px;
-    transform: scaleX(-1);
-}
-
-.testimonials__text {
-    width: 80%;
-    margin-bottom: 40px;
-    font-family: "OpenSans Regular", sans-serif;
-    font-size: 18px;
-    line-height: 28px;
-    color: #283645;
-}
-
-.testimonials__author {
-    margin-bottom: 15px;
-    font-family: "OpenSans Bold", sans-serif;
-    font-size: 24px;
-    color: #000000;
-}
-
-.testimonials__author-info {
-    font-family: "OpenSans Regular", sans-serif;
-    font-size: 18px;
-    color: #283645;
-}
