--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
 @import "components/swiper-slider.css";
 @import "components/tariffs.css";
 @import "components/tariffs-table.css";
+@import "components/contacts.css";
+@import "components/map.css";
+@import "components/footer.css";
 
 
 
