--- a/css/components/section.css
+++ b/css/components/section.css
@@ -1,10 +1,10 @@
-.section {
+.content-section {
     position: relative;
     display: flex;
     width: 100%;
 }
 
-.section__bg {
+.content-section__bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -14,7 +14,7 @@
     z-index: -1;
 }
 
-.section__wrapper {
+.content-section__wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
