--- a/css/components/offers-items.css
+++ b/css/components/offers-items.css
@@ -1,21 +1,21 @@
-.offers-items {
+.offers-list {
     display: flex;
     justify-content: space-around;
     width: 100%;
 }
 
-.offers-items__item {
+.offers-list__item {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 27%;
 }
 
-.offers-items__photo {
+.offers-list__photo {
     margin-bottom: 60px;
 }
 
-.offers-items__title {
+.offers-list__title {
     margin-bottom: 20px;
     text-align: center;
     font-family: "OpenSans Bold", sans-serif;
@@ -23,7 +23,7 @@
     color: #000000;
 }
 
-.offers-items__text {
+.offers-list__text {
     text-align: center;
     font-family: "OpenSans Regular", sans-serif;
     font-size: 18px;
