--- a/css/components/map.css
+++ b/css/components/map.css
@@ -1,13 +1,13 @@
-.map .content-section {
+.content-section--map {
     height: 500px;
 }
 
-.map .content-section__bg {
+.content-section--map .content-section__bg {
     clip-path: polygon(50% 20%, 0 0, 100% 0);
     z-index: 10;
     background: #ffffff;
 }
 
-.map .content-section__wrapper {
+.content-section--map .content-section__wrapper {
     width: 100%;
 }
