--- a/css/components/tariffs-table.css
+++ b/css/components/tariffs-table.css
@@ -7,41 +7,51 @@
 .tariffs-table__row {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     width: 100%;
 }
 
-.tariffs-table__header {
+.tariffs-table__item {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    height: 60px;
+    background: #ffffff;
+    border-top: 2px solid #e5e5e5;
+    border-left: 2px solid #e5e5e5;
 }
 
-.tariffs-table__header-item {
+.tariffs-table__item:last-child {
+    border-right: 2px solid #e5e5e5;
+}
+
+.tariffs-table__row:last-child .tariffs-table__item {
+    border-bottom: 2px solid #e5e5e5;
+}
+
+.tariffs-table__item--header {
     position: relative;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 25%;
-    margin-right: 2px;
     height: 98px;
     background: #283645;
+    border: none;
+    margin-left: 2px;
 }
 
-.tariffs-table__header-item:nth-child(2) {
+.tariffs-table__item--empty {
+    background: none;
+}
+
+.tariffs-table__item--header:nth-child(2) {
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px;
 }
 
-.tariffs-table__header-item:last-child {
+.tariffs-table__item--header:last-child {
+    border-right: 2px solid #283645;
     margin-right: 0;
     border-bottom-right-radius: 3px;
     border-top-right-radius: 3px;
-}
-
-.tariffs-table__header-item--empty {
-    background: none;
-    border-bottom: none;
 }
 
 .tariffs-table__header-title {
@@ -85,24 +95,6 @@
     background: #d22856;
 }
 
-.tariffs-table__item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 25%;
-    height: 60px;
-    background: #ffffff;
-    border-top: 2px solid #e5e5e5;
-    border-left: 2px solid #e5e5e5;
-}
-
-.tariffs-table__item:last-child {
-    border-right: 2px solid #e5e5e5;
-}
-
-.tariffs-table__row:last-child .tariffs-table__item {
-    border-bottom: 2px solid #e5e5e5;
-}
 
 .tariffs-table__item--main {
     display: flex;
