--- a/css/components/testimonials.css
+++ b/css/components/testimonials.css
@@ -1,4 +1,4 @@
-.testimonials .content-section__wrapper {
+.content-section--testimonials .content-section__wrapper {
     padding: 72px 0 40px;
 }
 
