--- a/css/components/facts.css
+++ b/css/components/facts.css
@@ -1,4 +1,4 @@
-.content-section--facts .content-section__wrapper {
+.facts .content-section__wrapper {
     flex-direction: row;
     padding-bottom: 65px;
 }
