--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 @import "components/navigation.css";
 @import "components/banner.css";
 @import "components/offers.css";
-@import "components/offers-items.css";
+@import "components/offers-list.css";
 @import "components/section.css";
 @import "components/facts.css";
 @import "components/testimonials.css";
