--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,11 +1,11 @@
 .banner {
-    position: relative;
     display: flex;
     flex-direction: column;
     background: url("../../img/header-bg.jpg") no-repeat;
     background-size: 100%;
     width: 100%;
     height: 100vh;
+    margin-top: -110px;
 }
 
 .banner__wrapper {
@@ -90,4 +90,14 @@
     position: absolute;
     bottom: 0;
     right: 100px;
+}
+
+@media (max-width: 767px) {
+    .banner {
+        margin-top: -68px;
+    }
+
+    .banner__title {
+        margin-bottom: 0;
+    }
 }
