--- a/css/components/header.css
+++ b/css/components/header.css
@@ -3,9 +3,9 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 14%;
+    height: 110px;
     background: rgba(0, 0, 0, 0.25);
-    z-index: 10;
+    z-index: 30;
 }
 
 .header__wrapper {
@@ -26,21 +26,25 @@
     height: 40px;
 }
 
-.header__logo--mobile {
+.burger-menu__header {
     display: none;
 }
 
+.header__burger-menu-logo {
+    display: none;
+    width: 50px;
+    height: 24px;
+}
+
 @media (max-width: 767px) {
-    .header__logo {
-        display: none;
-    }
+     .header {
+         height: 68px;
+     }
 
-    .header__logo--mobile {
-        display: flex;
-    }
-
-    .header__burger-menu-logo {
-        display: flex;
+     .burger-menu--open {
+        position: relative;
+        height: 326px;
+        background: #283645;
     }
 
     .header__wrapper {
@@ -48,31 +52,48 @@
         height: 100%;
     }
 
-    .burger-menu  {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    .burger-menu--open .header__wrapper {
         width: 100%;
-        height: 326px;
-        background: #283645;
-        z-index: 30;
     }
 
-    .burger-menu .header__wrapper {
+    .header__logo {
+        width: 75px;
+        height: 22px;
+    }
+
+    .burger-menu--open .header__link-logo {
+        display: none;
+    }
+
+    .burger-menu--open .navigation .header__link-logo {
         display: flex;
-        flex-direction: column;
+    }
+
+
+
+    .header__burger-menu-logo {
+        display: flex;
+    }
+
+    .burger-menu--open .header__burger-menu-logo {
+        display: none;
     }
 
     .burger-menu__header {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
         width: 100%;
+        height: 66px;
+        border-bottom: 1px solid #000000;
     }
 
-    .burger-menu__navigation {
+    .burger-menu__wrapper {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 87%;
     }
+
 }
