--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,12 +1,33 @@
 .banner {
-    display: flex;
-    flex-direction: column;
-    background: url("../../img/header-bg.jpg") no-repeat;
-    background-size: 100%;
-    width: 100%;
+    position: relative;
     height: 100vh;
     margin-top: -110px;
 }
+
+.banner-bg__wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+.banner-bg {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background: url("../../img/header-bg.jpg") no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+
+.banner__hand {
+    position: absolute;
+    bottom: 0;
+    right: 100px;
+}
+
 
 .banner__wrapper {
     display: flex;
@@ -26,8 +47,9 @@
 
 .banner__title {
     display: flex;
+    justify-content: center;
     align-items: center;
-    width: 300px;
+    width: 100%;
     margin-bottom: 48px;
     text-align: center;
     font-family: "OpenSans Light", sans-serif;
@@ -36,11 +58,23 @@
     line-height: 1.2;
 }
 
+.banner-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.banner-section__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .banner__link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 98%;
     height: 49px;
     margin-bottom: 71px;
     border: 3px solid #ffffff;
@@ -86,18 +120,82 @@
     line-height: 1.3;
 }
 
-.banner__hand {
-    position: absolute;
-    bottom: 0;
-    right: 100px;
-}
-
 @media (max-width: 767px) {
     .banner {
+        height: 733px;
         margin-top: -68px;
     }
 
+    .banner-bg {
+        background: url("../../img/header-bg-mobile.jpg") no-repeat;
+        background-size: cover;
+        height: 462px;
+        margin-top: -68px;
+    }
+
+    .banner__hand {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+    }
+
+    .banner__wrapper {
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 87%;
+        margin: 68px auto 0;
+        padding-top: 25px;
+    }
+
+    .banner__sub-wrapper {
+        flex-direction: column;
+        justify-content: space-between;
+        height: 638px;
+        width: 100%;
+    }
+
     .banner__title {
+        font-size: 24px;
         margin-bottom: 0;
+        line-height: 1.2;
+    }
+
+    .banner-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
+        height: 270px;
+        background: #1d2631;
+    }
+
+    .banner-section__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 87%;
+        padding: 28px 0 35px;
+    }
+
+    .banner__link {
+        margin-bottom: 30px;
+        font-size: 18px;
+        max-width: 500px;
+    }
+
+    .banner__brands {
+        margin-bottom: 25px;
+        max-width: 300px;
+    }
+
+    .banner__descr {
+        justify-content: center;
+        align-items: center;
+        width: 85%;
+        max-width: 500px;
+        font-size: 14px;
+        line-height: 1.5;
     }
 }
