--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -122,7 +122,7 @@
 
 @media (max-width: 767px) {
     .banner {
-        height: 733px;
+        height: auto;
         margin-top: -68px;
     }
 
