--- a/css/components/contacts.css
+++ b/css/components/contacts.css
@@ -1,4 +1,4 @@
-.contacts .section__wrapper {
+.contacts .content-section__wrapper {
     padding: 70px 0 20px;
 }
 
@@ -38,4 +38,5 @@
     font-family: "OpenSans Light", sans-serif;
     font-size: 24px;
     color: #d22856;
+    text-decoration: none;
 }
