--- a/css/components/facts.css
+++ b/css/components/facts.css
@@ -1,4 +1,4 @@
-.facts .section__wrapper {
+.facts .content-section__wrapper {
     flex-direction: row;
     padding-bottom: 65px;
 }
@@ -38,4 +38,10 @@
 
 .facts__link:hover {
     text-decoration: none;
+}
+
+@media (max-width: 767px) {
+    .facts {
+        display: none;
+    }
 }
