--- a/css/components/offers-items.css
+++ b/css/components/offers-items.css
@@ -30,3 +30,43 @@
     line-height: 1.6;
     color: #283645;
 }
+
+.offers-items__photo--mobile {
+    display: none;
+}
+
+@media (max-width: 767px) {
+    .offers-items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding-top: 80px;
+    }
+
+    .offers-items__item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        margin-bottom: 35px;
+    }
+
+    .offers-items__photo {
+        display: none;
+    }
+
+    .offers-items__title {
+        margin-bottom: 16px;
+        font-size: 18px;
+    }
+
+    .offers-items__text {
+        font-size: 14px;
+        line-height: 1.4;
+    }
+
+    .offers-items__photo--mobile {
+        display: block;
+    }
+}
