--- a/css/components/contacts.css
+++ b/css/components/contacts.css
@@ -40,3 +40,40 @@
     color: #d22856;
     text-decoration: none;
 }
+
+@media (max-width: 767px) {
+    .contacts .content-section__wrapper {
+        width: 87%;
+        padding: 50px 0 40px;
+    }
+
+    .contacts__title {
+        width: 100%;
+        margin-bottom: 40px;
+        font-size: 24px;
+    }
+
+    .contacts__items {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .contacts__item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 25px;
+    }
+
+    .contacts__item:nth-child(2) {
+        order: 1;
+    }
+
+    .contacts__item-title {
+        margin-bottom: 6px;
+    }
+}
