--- a/css/components/map.css
+++ b/css/components/map.css
@@ -1,7 +1,3 @@
-.map {
-    height: 500px;
-}
-
 .map .content-section__bg {
     clip-path: polygon(50% 20%, 0 0, 100% 0);
     z-index: 10;
@@ -10,4 +6,10 @@
 
 .map .content-section__wrapper {
     width: 100%;
+}
+
+@media (max-width: 767px) {
+    .map__main iframe {
+        height: 200px!important;
+    }
 }
