--- a/css/components/swiper-slider.css
+++ b/css/components/swiper-slider.css
@@ -2,6 +2,11 @@
     width: 100%;
     height: 100%;
 }
+
+.swiper-container--table {
+    display: none;
+}
+
 .swiper-slide {
     display: flex;
     flex-direction: column;
@@ -32,8 +37,25 @@
     transform: scaleX(-1);
 }
 
+@media (max-width: 767px) {
+    .swiper-container--table {
+        display: block;
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+     .swiper-pagination{
+        bottom: 0 !important;
+    }
+
+    .swiper-container--table .swiper-pagination{
+        bottom: -40px!important;
+    }
+}
+
 @media (max-width: 1023px) {
-    .swiper-slide {
+    .testimonials .swiper-slide {
         display: flex;
         flex-direction: column-reverse;
         justify-content: flex-end;
@@ -60,6 +82,7 @@
     .swiper-pagination-bullet {
         width: 6px;
         height: 6px;
+        margin: 0 7px!important;
         display: inline-block;
         border-radius: 100%;
         background-color: #bec2c7;
