--- a/css/components/tariffs.css
+++ b/css/components/tariffs.css
@@ -5,3 +5,20 @@
 .tariffs .content-section__wrapper {
     padding: 150px 0 100px;
 }
+
+@media (max-width: 767px) {
+    .tariffs {
+        overflow: hidden;
+    }
+
+    .tariffs .content-section__bg {
+        clip-path: polygon(0 8%, 100% 0%, 100% 100%, 0% 100%);
+    }
+
+    .tariffs .content-section__wrapper {
+        flex-direction: column;
+        align-items: center;
+        width: 87%;
+        padding: 90px 0 80px;
+    }
+}
