--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import "components/header.css";
 @import "components/navigation.css";
 @import "components/banner.css";
+@import "components/banner-info.css";
 @import "components/offers.css";
 @import "components/offers-list.css";
 @import "components/section.css";
