--- a/css/components/header.css
+++ b/css/components/header.css
@@ -26,24 +26,23 @@
     height: 40px;
 }
 
-.burger-menu__header {
+.header__burger-menu-logo {
     display: none;
 }
 
-.header__burger-menu-logo {
+.header__burger-menu-close {
     display: none;
-    width: 50px;
-    height: 24px;
 }
 
 @media (max-width: 767px) {
-     .header {
-         height: 68px;
-     }
+    .header {
+        height: 68px;
+    }
 
-     .burger-menu--open {
-        position: relative;
-        height: 326px;
+    .burger-menu--open {
+        display: flex;
+        flex-direction: column;
+        height: 324px;
         background: #283645;
     }
 
@@ -53,7 +52,35 @@
     }
 
     .burger-menu--open .header__wrapper {
+        display: flex;
+        flex-direction: column;
         width: 100%;
+    }
+
+    .header__header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 67px;
+        border-bottom: 1px solid transparent;
+    }
+
+    .burger-menu--open .header__header {
+        border-bottom: 1px solid #000000;
+    }
+
+    .header__header-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .burger-menu--open .header__header-wrapper {
+        width: 87%;
     }
 
     .header__logo {
@@ -61,39 +88,23 @@
         height: 22px;
     }
 
-    .burger-menu--open .header__link-logo {
-        display: none;
-    }
-
-    .burger-menu--open .navigation .header__link-logo {
-        display: flex;
-    }
-
-
-
     .header__burger-menu-logo {
         display: flex;
+        width: 32px;
+        height: 32px;
+    }
+
+    .header__burger-menu-close {
+        display: none;
     }
 
     .burger-menu--open .header__burger-menu-logo {
         display: none;
     }
 
-    .burger-menu__header {
+    .burger-menu--open .header__burger-menu-close {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 66px;
-        border-bottom: 1px solid #000000;
+        width: 24px;
+        height: 24px;
     }
-
-    .burger-menu__wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        width: 87%;
-    }
-
 }
