--- a/css/components/banner-info.css
+++ b/css/components/banner-info.css
@@ -60,6 +60,39 @@
     line-height: 1.3;
 }
 
+@media (max-width: 1023px) {
+    .banner__info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .banner__info-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .banner__link {
+        margin-bottom: 40px;
+        font-size: 18px;
+    }
+
+    .banner__brands {
+        margin-bottom: 40px;
+    }
+
+    .banner__descr {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        font-size: 18px;
+        line-height: 1.5;
+    }
+}
+
 @media (max-width: 767px) {
     .banner__info {
         display: flex;
