--- a/css/components/contacts.css
+++ b/css/components/contacts.css
@@ -3,7 +3,7 @@
 }
 
 .contacts__title {
-    width: 50%;
+    width: 62%;
     margin-bottom: 65px;
     font-family: "OpenSans Light", sans-serif;
     font-size: 50px;
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 25%;
+    width: 33%;
 }
 
 .contacts__item-title {
@@ -34,12 +34,53 @@
 }
 
 .contacts__item-text {
+    width: 100%;
+    max-width: 250px;
     text-align: center;
     font-family: "OpenSans Light", sans-serif;
     font-size: 24px;
     color: #d22856;
     text-decoration: none;
 }
+
+
+@media (max-width: 1023px) {
+    .contacts .content-section__wrapper {
+        width: 94%;
+        padding: 50px 0 0;
+    }
+
+    .contacts__title {
+        width: 60%;
+        margin-bottom: 40px;
+        font-size: 40px;
+    }
+
+    .contacts__items {
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .contacts__item {
+        width: 50%;
+        margin-bottom: 50px;
+    }
+
+    .contacts__item:nth-child(2) {
+        order: 1;
+    }
+
+    .contacts__item-title {
+        margin-bottom: 10px;
+    }
+
+    .contacts__item-text {
+        width: 80%;
+    }
+}
+
 
 @media (max-width: 767px) {
     .contacts .content-section__wrapper {
@@ -54,7 +95,6 @@
     }
 
     .contacts__items {
-        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -62,9 +102,6 @@
     }
 
     .contacts__item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         width: 100%;
         margin-bottom: 25px;
     }
