--- a/css/components/header.css
+++ b/css/components/header.css
@@ -21,11 +21,6 @@
     height: min-content;
 }
 
-.header__logo {
-    width: 147px;
-    height: 40px;
-}
-
 .header__burger-menu-logo {
     display: none;
 }
@@ -34,20 +29,16 @@
     display: none;
 }
 
-@media (max-width: 767px) {
-    .header {
-        height: 68px;
-    }
-
+@media (max-width: 1023px) {
     .burger-menu--open {
         display: flex;
         flex-direction: column;
-        height: 324px;
+        height: auto;
         background: #283645;
     }
 
     .header__wrapper {
-        width: 87%;
+        width: 94%;
         height: 100%;
     }
 
@@ -62,7 +53,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 67px;
+        height: 109px;
         border-bottom: 1px solid transparent;
     }
 
@@ -80,12 +71,7 @@
     }
 
     .burger-menu--open .header__header-wrapper {
-        width: 87%;
-    }
-
-    .header__logo {
-        width: 75px;
-        height: 22px;
+        width: 94%;
     }
 
     .header__burger-menu-logo {
@@ -108,3 +94,29 @@
         height: 24px;
     }
 }
+
+@media (max-width: 767px) {
+    .header {
+        height: 68px;
+    }
+
+    .burger-menu--open {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        background: #283645;
+    }
+
+    .header__wrapper {
+        width: 87%;
+    }
+
+    .header__header {
+        height: 67px;
+    }
+
+    .burger-menu--open .header__header-wrapper {
+        width: 87%;
+    }
+}
+
