--- a/css/components/map.css
+++ b/css/components/map.css
@@ -8,6 +8,12 @@
     width: 100%;
 }
 
+@media (max-width: 1023px) {
+    .map__main iframe {
+        height: 375px!important;
+    }
+}
+
 @media (max-width: 767px) {
     .map__main iframe {
         height: 200px!important;
