--- a/css/components/offers.css
+++ b/css/components/offers.css
@@ -7,7 +7,7 @@
 }
 
 .offers__title {
-    width: 80%;
+    width: 100%;
     font-family: "OpenSans Light", sans-serif;
     font-size: 50px;
     margin-bottom: 70px;
@@ -25,6 +25,43 @@
     width: 65%;
 }
 
+.offers-list__photo--mobile {
+    display: none;
+}
+
+@media (max-width: 1023px) {
+    .offers .content-section__wrapper {
+        width: 94%;
+        padding-bottom: 0;
+    }
+
+    .offers .content-section__bg {
+        clip-path: polygon(0 40%, 100% 34%, 100% 100%, 0% 100%);
+    }
+
+    .offers__title {
+        width: 100%;
+        font-size: 40px;
+    }
+
+    .offers__title:first-child {
+        padding-top: 60px;
+    }
+    .offers__title:nth-child(2) {
+        margin-bottom: 50px;
+    }
+
+    .offers__main {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+
+    .offers-list__photo--mobile {
+        display: flex;
+        justify-content: left;
+        width: 50%;
+    }
+}
 
 @media (max-width: 767px) {
     .offers .content-section__wrapper {
@@ -47,6 +84,17 @@
         margin-bottom: 25px;
     }
     .offers__title:nth-child(2) {
+        width: 100%;
+    }
+
+    .offers__main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .offers-list__photo--mobile {
+        justify-content: center;
         width: 100%;
     }
 }
