--- a/css/components/swiper-slider.css
+++ b/css/components/swiper-slider.css
@@ -37,28 +37,11 @@
     transform: scaleX(-1);
 }
 
-@media (max-width: 767px) {
-    .swiper-container--table {
-        display: block;
-        position: relative;
-        width: 100%;
-        height: 100%;
-    }
-
-     .swiper-pagination{
-        bottom: 0 !important;
-    }
-
-    .swiper-container--table .swiper-pagination{
-        bottom: -40px!important;
-    }
-}
-
 @media (max-width: 1023px) {
     .testimonials .swiper-slide {
         display: flex;
-        flex-direction: column-reverse;
-        justify-content: flex-end;
+        flex-direction: column;
+        justify-content: flex-start;
     }
 
     .arrow {
@@ -86,5 +69,28 @@
         display: inline-block;
         border-radius: 100%;
         background-color: #bec2c7;
+    }
+}
+
+@media (max-width: 767px) {
+    .swiper-container--table {
+        display: block;
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+    .testimonials .swiper-slide {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: flex-end;
+    }
+
+    .swiper-pagination{
+        bottom: 0 !important;
+    }
+
+    .swiper-container--table .swiper-pagination{
+        bottom: -40px!important;
     }
 }
