--- a/css/components/tariffs.css
+++ b/css/components/tariffs.css
@@ -1,3 +1,7 @@
+.tariffs {
+    overflow: hidden;
+}
+
 .tariffs .content-section__bg {
     clip-path: polygon(0 14%, 100% 0%, 100% 100%, 0% 100%);
 }
@@ -6,19 +10,25 @@
     padding: 150px 0 100px;
 }
 
-@media (max-width: 767px) {
-    .tariffs {
-        overflow: hidden;
-    }
-
+@media (max-width: 1023px) {
     .tariffs .content-section__bg {
-        clip-path: polygon(0 8%, 100% 0%, 100% 100%, 0% 100%);
+        clip-path: polygon(0 14%, 100% 0%, 100% 100%, 0% 100%);
     }
 
     .tariffs .content-section__wrapper {
         flex-direction: column;
         align-items: center;
-        width: 87%;
+        width: 94%;
         padding: 90px 0 80px;
+    }
+}
+
+@media (max-width: 767px) {
+    .tariffs .content-section__bg {
+        clip-path: polygon(0 8%, 100% 0%, 100% 100%, 0% 100%);
+    }
+
+    .tariffs .content-section__wrapper {
+        width: 87%;
     }
 }
