--- a/css/components/testimonials.css
+++ b/css/components/testimonials.css
@@ -9,10 +9,11 @@
     margin-bottom: 50px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1023px) {
     .testimonials .content-section__wrapper {
-        padding: 50px 0 40px;
-        width: 87%;
+        padding: 100px 0 20px;
+        width: 94%;
+        height: 230px;
     }
 
     .testimonials__image {
@@ -20,7 +21,12 @@
     }
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 767px) {
+    .testimonials .content-section__wrapper {
+        padding: 50px 0 40px;
+        width: 87%;
+    }
+
     .testimonials__image {
         display: none;
     }
