--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,7 +1,6 @@
 .banner {
     position: relative;
-    height: 100vh;
-    margin-top: -110px;
+    height: auto;
 }
 
 .banner-bg__wrapper {
@@ -9,6 +8,8 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 100vh;
+    margin-top: -110px;
     z-index: -1;
 }
 
@@ -31,7 +32,7 @@
 .banner__wrapper {
     display: flex;
     align-items: center;
-    height: 100%;
+    height: 663px;
     width: 73%;
     margin: 0 auto;
     z-index: 10;
@@ -42,7 +43,6 @@
     flex-direction: column;
     align-items: center;
     width: 300px;
-    padding-top: 100px;
 }
 
 .banner__title {
@@ -60,12 +60,12 @@
 
 @media (max-width: 1023px) {
     .banner {
-        height: 660px;
-        margin-top: -110px;
+        height: 618px;
+        margin-top: -68px;
     }
 
     .banner-bg__wrapper {
-        margin-top: 0;
+        margin-top: -42px;
     }
 
     .banner-bg {
@@ -88,7 +88,6 @@
 
     .banner__sub-wrapper {
         justify-content: flex-start;
-        padding-top: 0;
     }
 
     .banner__title {
@@ -128,6 +127,7 @@
         flex-direction: column;
         justify-content: flex-start;
         width: 87%;
+        height: auto;
         margin: 68px auto 0;
         padding-top: 25px;
     }
