--- a/css/components/header.css
+++ b/css/components/header.css
@@ -16,21 +16,8 @@
     height: 100%;
 }
 
-.header__link-logo {
-    display: flex;
-    height: min-content;
-}
-
-.header__burger-menu-logo {
-    display: none;
-}
-
-.header__burger-menu-close {
-    display: none;
-}
-
 @media (max-width: 1023px) {
-    .burger-menu--open {
+    .burger--open {
         display: flex;
         flex-direction: column;
         height: auto;
@@ -42,56 +29,10 @@
         height: 100%;
     }
 
-    .burger-menu--open .header__wrapper {
+    .burger--open .header__wrapper {
         display: flex;
         flex-direction: column;
         width: 100%;
-    }
-
-    .header__header {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 109px;
-        border-bottom: 1px solid transparent;
-    }
-
-    .burger-menu--open .header__header {
-        border-bottom: 1px solid #000000;
-    }
-
-    .header__header-wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-    }
-
-    .burger-menu--open .header__header-wrapper {
-        width: 94%;
-    }
-
-    .header__burger-menu-logo {
-        display: flex;
-        width: 32px;
-        height: 32px;
-    }
-
-    .header__burger-menu-close {
-        display: none;
-    }
-
-    .burger-menu--open .header__burger-menu-logo {
-        display: none;
-    }
-
-    .burger-menu--open .header__burger-menu-close {
-        display: flex;
-        width: 24px;
-        height: 24px;
     }
 }
 
@@ -100,7 +41,7 @@
         height: 68px;
     }
 
-    .burger-menu--open {
+    .burger--open {
         display: flex;
         flex-direction: column;
         height: auto;
@@ -108,14 +49,6 @@
     }
 
     .header__wrapper {
-        width: 87%;
-    }
-
-    .header__header {
-        height: 67px;
-    }
-
-    .burger-menu--open .header__header-wrapper {
         width: 87%;
     }
 }
