--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import "fonts.css";
 
 @import "components/header.css";
+@import "components/burger.css";
 @import "components/navigation.css";
 @import "components/banner.css";
 @import "components/banner-info.css";
