--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -64,7 +64,12 @@
         margin-top: -68px;
     }
 
+    .banner__wrapper {
+        height: 618px;
+    }
+
     .banner-bg__wrapper {
+        height: auto;
         margin-top: -42px;
     }
 
@@ -105,6 +110,7 @@
     }
 
     .banner-bg__wrapper {
+        height: auto;
         margin-top: 0;
     }
 
@@ -129,17 +135,17 @@
         width: 87%;
         height: auto;
         margin: 68px auto 0;
-        padding-top: 25px;
     }
 
     .banner__sub-wrapper {
         flex-direction: column;
         justify-content: space-between;
-        height: 638px;
+        height: 664px;
         width: 100%;
     }
 
     .banner__title {
+        padding-top: 25px;
         width: 100%;
         font-size: 24px;
         margin-bottom: 0;
