--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 @import "components/burger.css";
 @import "components/navigation.css";
 @import "components/banner.css";
-@import "components/banner-info.css";
+@import "components/app-download.css";
 @import "components/offers.css";
 @import "components/offers-list.css";
 @import "components/section.css";
