--- a/css/components/burger.css
+++ b/css/components/burger.css
@@ -1,50 +1,10 @@
-/*BURGER*/
 .burger__toggle {
-    opacity: 0;
+    display: none;
 }
 
 .burger__btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    width: 30px;
-    height: 26px;
-    cursor: pointer;
+    display: none;
 }
-
-.burger__btn > span,
-.burger__btn > span::before,
-.burger__btn > span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #ffffff;
-}
-.burger__btn > span::before {
-    content: '';
-    top: -8px;
-}
-.burger__btn > span::after {
-    content: '';
-    top: 8px;
-}
-
-.burger__toggle:checked ~ .burger__btn > span {
-    transform: rotate(45deg);
-}
-
-.burger__toggle:checked ~ .burger__btn > span::before {
-    top: 0;
-    transform: rotate(0);
-}
-
-.burger__toggle:checked ~ .burger__btn > span::after {
-    top: 0;
-    transform: rotate(90deg);
-}
-/************/
 
 .burger__link-logo {
     display: flex;
@@ -77,6 +37,54 @@
     .burger--open .burger__wrapper {
         width: 94%;
     }
+
+    /*BURGER*/
+    .burger__toggle {
+        opacity: 0;
+    }
+
+    .burger__btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        width: 30px;
+        height: 26px;
+        cursor: pointer;
+    }
+
+    .burger__btn > span,
+    .burger__btn > span::before,
+    .burger__btn > span::after {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background-color: #ffffff;
+    }
+    .burger__btn > span::before {
+        content: '';
+        top: -8px;
+    }
+    .burger__btn > span::after {
+        content: '';
+        top: 8px;
+    }
+
+    .burger__toggle:checked ~ .burger__btn > span {
+        transform: rotate(45deg);
+    }
+
+    .burger__toggle:checked ~ .burger__btn > span::before {
+        top: 0;
+        transform: rotate(0);
+    }
+
+    .burger__toggle:checked ~ .burger__btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+    }
+    /************/
 }
 
 @media (max-width: 767px) {
