--- a/css/components/burger.css
+++ b/css/components/burger.css
@@ -1,8 +1,8 @@
-.burger-open {
+.burger__toggle {
     display: none;
 }
 
-.burger-close {
+.burger__btn {
     display: none;
 }
 
@@ -38,25 +38,53 @@
         width: 94%;
     }
 
-    .burger-open {
+    /*BURGER*/
+    .burger__toggle {
+        opacity: 0;
+    }
+
+    .burger__btn {
         display: flex;
-        width: 32px;
-        height: 32px;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        width: 30px;
+        height: 26px;
+        cursor: pointer;
     }
 
-    .burger-close {
-        display: none;
+    .burger__btn > span,
+    .burger__btn > span::before,
+    .burger__btn > span::after {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background-color: #ffffff;
+    }
+    .burger__btn > span::before {
+        content: '';
+        top: -8px;
+    }
+    .burger__btn > span::after {
+        content: '';
+        top: 8px;
     }
 
-    .burger--open .burger-open {
-        display: none;
+    .burger__toggle:checked ~ .burger__btn > span {
+        transform: rotate(45deg);
     }
 
-    .burger--open .burger-close {
-        display: flex;
-        width: 24px;
-        height: 24px;
+    .burger__toggle:checked ~ .burger__btn > span::before {
+        top: 0;
+        transform: rotate(0);
     }
+
+    .burger__toggle:checked ~ .burger__btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+    }
+    /************/
 }
 
 @media (max-width: 767px) {
