added banner and ad

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import "common/reset.css";
+@import "common/helpers.css";
 @import "fonts.css";
 
 @import "components/header.css";
@@ -18,8 +19,7 @@
 @import "components/contacts.css";
 @import "components/map.css";
 @import "components/footer.css";
-
-/*FORM-MOBILE*/
+@import "components/ad.css";
 
 
 
