--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,9 @@
 /*FORM*/
 @import "components/ad.css";
 @import "components/form.css";
+@import "components/form-item.css";
 @import "components/user-data.css";
-
+@import "components/achievements.css";
+@import "components/check.css";
 
 
