--- a/css/components/check.css
+++ b/css/components/check.css
@@ -2,6 +2,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
+    margin-top: 40px;
+    font-family: "OpenSans Regular", sans-serif;
+    font-size: 18px;
+    color: #283645;
 }
 
 .check__input {
