--- a/css/components/user-data.css
+++ b/css/components/user-data.css
@@ -3,38 +3,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    padding-bottom: 15px;
 }
 
-.user-data .content-section__wrapper {
-    width: 87%;
-}
-
-.user-data__item {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin-bottom: 25px;
-}
-
-.user-data__title {
-    margin-bottom: 13px;
-    padding-left: 20px;
-    font-family: "OpenSans Regular", sans-serif;
-    font-size: 14px;
-    color: #d22856;
-    text-transform: uppercase;
-}
-
-.user-data__input {
-    width: 84%;
-    padding: 16px 20px;
-    border: 2px solid #e5e5e5;
-    border-radius: 3px;
-    font-family: "OpenSans Regular", sans-serif;
-    font-size: 18px;
-    color: #283645;
-}
-
-.user-data__input::placeholder {
-    color: #283645;
-}
