added apps, form-comment, submit, button, radio components

--- a/css/style.css
+++ b/css/style.css
@@ -28,5 +28,10 @@
 @import "components/achievements.css";
 @import "components/check.css";
 @import "components/form-contacts.css";
+@import "components/apps.css";
+@import "components/radio-button.css";
+@import "components/form-comment.css";
+@import "components/submit.css";
+@import "components/button.css";
 
 
