--- a/css/components/form-section.css
+++ b/css/components/form-section.css
@@ -46,7 +46,27 @@
     color: #283645;
 }
 
-.form-section__input::placeholder {
+.form-section__textarea {
+    width: 84%;
+    height: 156px;
+    margin-top: 20px;
+    padding: 20px;
+    border: 2px solid #e5e5e5;
+    border-radius: 3px;
+    resize: none;
+    font-family: "OpenSans Regular", sans-serif;
+    font-size: 18px;
+    line-height: 1.9;
     color: #283645;
 }
 
+.form-section__subtitle {
+    font-family: "OpenSans Regular", sans-serif;
+    font-size: 14px;
+    color: #283645;
+    text-transform: uppercase;
+}
+
+.form-section__subtitle span {
+    color: #d22856;
+}
